--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,49 +1,47 @@
-name: Build and public docker image
+# 文件路径: .github/workflows/build-and-push.yaml
+name: Build and Push Docker Image
 
 on:
   push:
-    branches: "master"
+    branches:
+      - "master" # 或者 "main"
 
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
-    # run only when code is compiling and tests are passing
     if: "!contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[ci skip]')"
-    # steps to perform in job
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: install deps
+      - name: Install dependencies
         run: |
+          sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
           wget git golang clang llvm curl pkg-config build-essential zlib1g-dev
 
-      - name: build package
-        run:  make build
+      - name: Build Go application
+        run: make build
 
-      # setup Docker buld action
       - name: Set up Docker Buildx
-        id: buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to Github Packages
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ secrets.USERNAME_ALI }}
+          password: ${{ secrets.PASSWORD_ALI }}
 
       - name: Build image and push to GitHub Container Registry
         uses: docker/build-push-action@v2
         with:
-          # relative path to the place where source code with Dockerfile is located
-          context: ./
-          file: dockerfile
+          context: .
+          file: ./Dockerfile
           platforms: linux/amd64
-          # Note: tags has to be all lower-case
+          # [关键更新] 修改镜像标签以匹配新项目
           tags: |
-            ghcr.io/${{ github.repository_owner }}/cilium-template:latest
+            registry.cn-hangzhou.aliyuncs.com/testwydimage/ebpf-injector:latest
           push: true
 
       - name: Image digest
