--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,8 +19,9 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
-          wget git golang clang llvm curl pkg-config build-essential zlib1g-dev \
-          linux-libc-dev libbpf-dev
+           libelf1 libelf-dev zlib1g-dev libclang-dev \
+           golang clang llvm libbpf-dev linux-libc-dev build-essential
+
 
         # [关键更新 2] 在编译时明确指定 CFLAGS
       - name: Build Go application
