--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,14 +13,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
+      - name: Set up Go
+          uses: actions/setup-go@v5
+          with:
+            go-version: '1.20' # 与您的 go.mod 文件中的版本保持一致
       # [关键更新 1] 安装更精确的依赖包
       - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
-           libelf1 libelf-dev zlib1g-dev libclang-dev \
-           golang clang llvm libbpf-dev linux-libc-dev build-essential
+          wget git golang clang llvm curl pkg-config build-essential zlib1g-dev
 
 
         # [关键更新 2] 在编译时明确指定 CFLAGS
