--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
-          clang llvm libbpf-dev linux-libc-dev build-essential  iproute2 \
+          clang llvm libbpf-dev linux-libc-dev build-essential  iproute2  libelf1 \
           wget git golang clang llvm curl pkg-config build-essential zlib1g-dev
 
       - name: Download Go modules
